# django-pgjsonschema

./: .gitignore  README.md  pyproject.toml  settings.py
pgjsonschema/: __init__.py  apps.py  checks.py  core.py  triggers.py  types.py  version.py
pgjsonschema/migrations/: 0001_initial.py
pgjsonschema/tests/: models.py  test_core.py
pgjsonschema/tests/migrations/: 0001_initial.py
